syntax = "proto3";

import "google/protobuf/empty.proto";

package auth;

option go_package = "./;proto";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Validate(ValidateRequest) returns (ValidateResponse) {}
  rpc JWKValidate(google.protobuf.Empty) returns (JWKValidateResponse) {}
}

// Register

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  int64 status = 1;
  string error = 2;
}

// Login

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  int32 status = 1;
  Token access_token = 2 [json_name = "access_token"];
  Token refresh_token = 3 [json_name = "refresh_token"];
  int64 exp = 4;
}

message Token {
  string aud = 1;
  int64 exp = 2;
  string jti = 3;
  int64 iat = 4;
  string iss = 5;
  string sub = 6;
  repeated string roles = 7;
}

// Validate

message ValidateRequest {string token = 1;}

message ValidateResponse {
  int64 status = 1;
  string error = 2;
  int64 userId = 3;
}

// JWKValidateResponse

message JWKValidateResponse {
  repeated JWK keys = 1;
}

message JWK {
  string kty = 1;
  string use = 2;
  string kid = 3;
  string k = 4;
  string alg = 5;
}